[gd_scene load_steps=4 format=3 uid="uid://bvpccon01cm7m"]

[ext_resource type="PackedScene" uid="uid://b4r2oxwexlac6" path="res://src/main/PlantElement/PlantElement.tscn" id="1_ksa3u"]
[ext_resource type="Script" path="res://src/main/PlantElement/TreeLike/TreeLike.gd" id="2_ea8lh"]
[ext_resource type="PackedScene" uid="uid://cor5raih46oms" path="res://src/main/PlantElement/TreeLike/TreeLikeLine.tscn" id="3_7r605"]

[node name="TreeLike" instance=ExtResource("1_ksa3u")]
script = ExtResource("2_ea8lh")

[node name="Origin" type="Marker2D" parent="." index="0"]
unique_name_in_owner = true

[node name="TreeLikeLines" type="Node2D" parent="." index="1"]
unique_name_in_owner = true

[node name="TreeLikeLine" parent="TreeLikeLines" index="0" instance=ExtResource("3_7r605")]
